Thu Dec 22 15:17:30 2005  Chad Elliott  <elliott_c@ociweb.com>

        * templates/vc7csharp.mpd:

          Added a missing <%endif%>.

Thu Dec 22 08:30:56 2005  Chad Elliott  <elliott_c@ociweb.com>

        * USAGE:

          Update the usage to contain the 'bds' type.

        * modules/Creator.pm:

          Fixed a feature where $() variables were automatically expanded
          during a subtraction.  Now, we only expand the $() variable if we
          could not find the subtraction value in the name value.

        * templates/bds.mpd:

          Modified the includes foreach to set the forcount base.

        * templates/bdsdll.mpt:
        * templates/bdsexe.mpt:

          Include the user_bds* file instead of the user_cbx* file.

Wed Dec 21 19:17:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * templates/vc8platforms.mpt:
          Set the TargetMachine when building for EM64T

Wed Dec 21 18:55:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * templates/bds.mpd:
        * templates/bdsdll.mpt:
        * templates/bdsexe.mpt:
        * modules/BDSProjectCreator.pm:
        * modules/BDSWorkspaceCreator.pm:
          Initial version of Borland Developer Studio template. Work is
          being done for the C++ personality. All files, compiler flags
          and libs are generated but some more work has to be done to
          use these for a full build. Now they are already useful for
          debugging apps that are build from the command line.

        * modules/MPC.pm:
        * modules/MWC.pm:
          Added BDS files

Wed Dec 21 06:28:04 2005  Chad Elliott  <elliott_c@ociweb.com>

        * MPC.ico:
        * registry.pl:

          Added the ability to register the .mpc and .mwc file types as well
          as create context menus within the Windows explorer.

        * PROBLEM-REPORT-FORM:

          Fixed the URL for the MPC FAQ.

        * README:
        * modules/TemplateParser.pm:
