@@ -1,3 +1,14 @@
+Thu Dec 22 13:56:14 2005  J.T. Conklin  <jtc@acorntoolworks.com>
+
+	* modules/AutomakeProjectCreator.pm:
+
+	  Disable code that prefixed include paths with "$(srcdir)/".  In
+	  some cases an include path should be relative to the source dir,
+	  in others it should be relative to the build dir, and sometimes
+	  it should be relative to both.  Since it is impossible to guess
+	  which is the correct choice, require the *.mpc file to specify
+	  it correctly.
+
 Thu Dec 22 15:17:30 2005  Chad Elliott  <elliott_c@ociweb.com>
 
         * templates/vc7csharp.mpd:
